test/Fail/Issue958.err
Issue958.agda:16.10-11: error: [UnequalTypes]
The type
  IsFunctor
is not a subtype of
  map F
when checking that the expression F has type map F
